--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.vscode
 
 # C extensions
 *.so
@@ -104,6 +105,9 @@ celerybeat.pid
 # Environments
 .env
 .venv
+venv
+myenv
+myenv/
 env/
 venv/
 ENV/
